# landing

./: .editorconfig  .gitignore  README.md  cloudformation.yaml  hugo.toml  pyproject.toml  requirements.txt  run.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yaml
assets/sass/: 404.scss  _about.scss  _ai-bot.scss  _article.scss  _author-card.scss  _blog-navigation.scss  _blog-subscribe-form.scss  _blog.scss  _btn.scss  _contact-form.scss  _contact.scss  _distributed-team.scss  _effects.scss  _fonts.scss  _footer.scss  _forms.scss  _header.scss  _home.scss  _how-we-work.scss  _industries.scss  _mixins.scss  _privacy.scss  _services.scss  _solutions.scss  _teamplify-link.scss  _teamplify.scss  _technologies-stack.scss  _technology-stack.scss  _technology.scss  _typography.scss  _vars.scss  _youtube.scss  critical.scss  main.scss  non-critical.scss
contact-form-handler/: pyproject.toml  requirements.txt
content/: consultation.md
content/_shared/: youtube-latest.md
content/about/: _index.md  about-1-our-story.md  about-2-we-build-software.md  call-to-action.md  facts.md  our-values.md  team.md  testimonials-1-alex-ford.md  testimonials-2-justin-demaris.md  testimonials-3-ken-robinson.md  testimonials-3-pat-sullivan.md  testimonials-4-corey-agopian.md  testimonials-4-justin-demaris.md  testimonials-5-ken-robinson.md  testimonials-5-pat-sullivan.md  testimonials-6-tom-eldar.md  (+13 more)
deploy/: aws.py  settings.py
i18n/: en.toml
lambda-functions/: contact_form.py  handler.py  newsletter_sign_up.py  pipedrive.py  pyproject.toml
layouts/: 404.html
(+232 files in other folders)
