[project]
name = "landing"
version = "0.1.0"
readme = "README.md"
requires-python = "== 3.13.*"
dependencies = [
    "awscli==1.29.20",
    "click==8.1.6",
    "flake8==6.1.0",
    "flake8-pyproject==1.2.3",
    "isort==5.12.0",
    "sarge==0.1.7.post1",
]

[tool.flake8]
max-line-length = 80
exclude = [
    ".git",
    ".venv",
    "node_modules",
    "contact-form-handler/dependencies",
    "public",
]

[tool.isort]
line_length = 80
lines_after_imports = 2
multi_line_output = 2
extend_skip = [
    "contact-form-handler/dependencies",
    "public",
]
